k8s/kafka.yaml
# k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nurscents-kafka
  namespace: nur-scents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nurscents-kafka
  template:
    metadata:
      labels:
        app: nurscents-kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:latest
        ports:
        - containerPort: 9092
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nurscents-kafka
  namespace: nur-scents
spec:
  selector:
    app: nurscents-kafka
  ports:
  - port: 9092
    targetPort: 9092
